--- a/product-catgories/Juise-Blending.html
+++ b/product-catgories/Juise-Blending.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cooking & heating</title>
+  <title>Juise & Blending</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <h2 class="product-title">Cooking & Heating</h2>
+  <h2 class="product-title">Juise & Blending</h2>
    <section class="product-category">
     <div class="category-nav">
     <button class="active">All</button>
