Added animation for evry section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/style.css">
   <!-- AOS Animation CSS -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<link rel="stylesheet" href="https://unpkg.com/lenis@1.3.8/dist/lenis.css">
+   <link rel="stylesheet" href="https://unpkg.com/lenis@1.3.8/dist/lenis.css">
 
 </head>
 
@@ -25,7 +25,7 @@
       <span></span>
     </button>
    <nav class="modern-nav-group">
-  <a href="#" class="modern-nav-link active">Home</a>
+  <a href="#hero" class="modern-nav-link active">Home</a>
   <a href="#about" class="modern-nav-link">About</a>
   <div class="nav-hover-group">
     <a href="#product-catagory-section" class="modern-nav-link">Product ></a>
@@ -67,7 +67,7 @@
 <!-- Nav End -->
 <!-- hero -->
 <main>
-  <section class="hero">
+  <section class="hero" id="hero">
     <div class="hero-bg">
       <img src="img/hero/360_F_627853212_bIw6wBo8qXXZvrj7wVXNew9fovoVSEoJ.jpg" alt="Ice Cream Machine" class="hero-img-left">
       <img src="img/hero/img-4.webp" alt="Oven" class="hero-img-right">
@@ -90,7 +90,11 @@
 
   <!-- About -->
     <section class="about-section" id="about">
-    <h1>ABOUT US</h1>
+     <h1 class="about-animated-text">
+    <span>A</span><span>B</span><span>O</span><span>U</span><span>T</span>
+    <span>&nbsp;</span>
+    <span>U</span><span>S</span>
+  </h1>
     <div class="intro">
       <p>
         At <strong>DEE Kitchen</strong> , we specialize in providing high-quality, durable, and efficient commercial kitchen appliances that power restaurants, hotels, bakeries, and catering businesses across the country. With a focus on performance, safety, and innovation, we deliver reliable kitchen solutions that help food businesses thrive in fast-paced, demanding environments.
@@ -164,36 +168,31 @@
   <div class=" container">
      <a href="/product-catgories/Frying-Grilling.html" class="box wedding">
       <h2>Frying & Grilling </h2>
-      <p><span>For crispy, golden textures and smoky flavors.</span></BR> 
-        Designed for fast and even cooking, this set includes air fryers, grills, deep fryers, and tandoors—ideal for commercial kitchens and quick-serve setups. From toasters to sandwich makers, deliver hot, tasty bites efficiently.</p>
+      <p><span>For crispy, golden textures and smoky flavors.</span></p>
     </a>
+    <div class="product-alt-btn">Click catagories for product</div>
     <a href="/product-catgories/ice-cold.html" class="box convocations">
       <h2>Ice & Cold Preparations</h2>
-      <p>For frozen treats and chilling convenience.
-Perfect for dessert stations and cafes, this range includes equipment like ice cream makers, ice crushers, and yogurt makers, ensuring quick and hygienic cold preparation.</p>
+      <p>For frozen treats and chilling convenience.</p>
     </a>
     <a href="/product-catgories/Baking-roasting.html" class="box sports">
       <h2>Baking & Roasting</h2>
-      <p>For cakes, breads, pizzas, and perfectly roasted dishes.
-Includes OTGs, convection ovens, and built-in ovens that offer precision temperature control.</p>
+      <p>For cakes, breads, pizzas, and perfectly roasted dishes.</p>
     </a>
     <div class="box tagline">
       <h2><span>Dee kitchen</span><br>Making Waves Everywhere !</h2>
     </div>
     <a href="/product-catgories/eating-cooking.html" class="box parties">
       <h2>Cooking & Eating</h2>
-      <p><BR>Reliable essentials for daily meal prep.</BR>Reliable essentials for daily meal prep.
-Core kitchen tools like induction cooktops, gas hobs, multi-cookers, and electric kettles make everyday cooking effortless. Whether slow cooking or boiling quickly, this category covers all heat-based kitchen activities.</p>
+      <p><BR>Reliable essentials for daily meal prep.</BR></p>
     </a>
     <a href="/product-catgories/Juise-Blending.html" class="box parties">
       <h2>Juice & blending</h2>
-      <p>Fuel health and flavor with every blend.
-This category includes everything from cold press juicers to hand blenders, mixer grinders, and smoothie makers. Ideal for homes and juice bars looking for consistency, speed, and nutrient-rich drinks.</p>
+      <p>Fuel health and flavor with every blend.</p>
     </a>
     <a href="/product-catgories/Beavarge-Speacial.html" class="box parties">
       <h2>Beavarage & Speacial use</h2>
-      <p>Curated for beverages and specialty prep.
-From coffee machines to milk frothers, this range covers niche appliances tailored for cafes, offices, and modern homes. Includes tea brewers, hot & cold water dispensers, and water purifiers for every hydration need.</p>
+      <p>Curated for beverages and specialty prep.</p>
     </a>
   </div>
  </section>
@@ -274,7 +273,7 @@ From coffee machines to milk frothers, this range covers niche appliances tailor
   <!-- serivce -->
    <section class="process-section" id="process">
   <div class="process-container">
-    <h5 class="sub-heading">How We Work</h5>
+    <h5 class="sub-heading">Process</h5>
     <h2 class="main-heading">Here's how we work</h2>
     <p class="process-intro">
       From consultation to installation — our process is fast, transparent, and expert-driven.
@@ -375,7 +374,7 @@ From coffee machines to milk frothers, this range covers niche appliances tailor
       <div class="work-stat-label">Projects Delivered</div>
     </div>
     <div class="work-stat-card">
-      <div class="work-stat-value">874,874</div>
+      <div class="work-stat-value">87,874</div>
       <div class="work-stat-label">Happy Clients</div>
     </div>
     <div class="work-stat-card">
@@ -389,7 +388,7 @@ From coffee machines to milk frothers, this range covers niche appliances tailor
   </div>
   
 <!-- work -->
-  <h3 class="work-testimonials-title">Testimonials</h3>
+  <h3 class="work-testimonials-titles">Testimonials</h3>
   <div class="work-testimonials">
     <div class="work-testimonial-list">
       <div class="work-testimonial-person">
@@ -421,21 +420,41 @@ From coffee machines to milk frothers, this range covers niche appliances tailor
         </div>
       </div>
     </div>
-    <div class="work-testimonial-main">
-      <div class="work-testimonial-person">
-        <img src="https://ui-avatars.com/api/?name=Arjun+Menon&background=FF6B1A&color=fff&size=64" alt="AR-SHAKIR">
-        <div>
-          <div class="work-testimonial-name">Arjun-Menon</div>
-          <div class="work-testimonial-role">Executive Chef, Coastal Spice Group</div>
-        </div>
-      </div>
-      <div class="work-testimonial-quote">
-        “They are the best people. And this is the suitable platform to learn from distance.”
-        “Reliable products, great after-sales service, and excellent turnaround time. A fantastic partner for kitchen infrastructure.”
-      </div>
-      <div class="work-testimonial-quote-icon">”</div>
+   <div class="work-testimonial-main">
+  <div class="work-testimonial-person testimonial-slide active">
+    <img src="https://ui-avatars.com/api/?name=Arjun+Menon&background=FF6B1A&color=fff&size=64" alt="Arjun Menon">
+    <div>
+      <div class="work-testimonial-name">Arjun Menon</div>
+      <div class="work-testimonial-role">Executive Chef, Coastal Spice Group</div>
+    </div>
+    <div class="work-testimonial-quote">
+      “They are the best people. And this is the suitable platform to learn from distance.”
+      <br>
+      “Reliable products, great after-sales service, and excellent turnaround time. A fantastic partner for kitchen infrastructure.”
     </div>
   </div>
+  <div class="work-testimonial-person testimonial-slide">
+    <img src="https://ui-avatars.com/api/?name=Sneha+Rao&background=2D9CDB&color=fff&size=64" alt="Sneha Rao">
+    <div>
+      <div class="work-testimonial-name">Sneha Rao</div>
+      <div class="work-testimonial-role">Owner, Rao Bakers & Confectionery</div>
+    </div>
+    <div class="work-testimonial-quote">
+      “DEE Kitchen transformed our bakery’s workflow. The equipment is top-notch and the team is always ready to help.”
+    </div>
+  </div>
+  <div class="work-testimonial-person testimonial-slide">
+    <img src="https://ui-avatars.com/api/?name=Rajat+Kapoor&background=FF6B1A&color=fff&size=64" alt="Rajat Kapoor">
+    <div>
+      <div class="work-testimonial-name">Rajat Kapoor</div>
+      <div class="work-testimonial-role">Hotel Manager, Urban Stay Inns</div>
+    </div>
+    <div class="work-testimonial-quote">
+      “Professional, reliable, and innovative. Our hotel kitchens have never run smoother.”
+    </div>
+  </div>
+  <div class="work-testimonial-quote-icon">”</div>
+</div>
 </section>
 <!-- work end -->
 
@@ -459,6 +478,7 @@ From coffee machines to milk frothers, this range covers niche appliances tailor
       <div class="footer-column">
         <h3>Location</h3>
         <p>No.12, Anna Nagar, Salem<br>Tamil Nadu - 600040</p>
+         <h3>Email</h3>
       </div>
       <div class="footer-column">
         <h3>Contact Us</h3>
@@ -468,6 +488,7 @@ From coffee machines to milk frothers, this range covers niche appliances tailor
           <a href="#"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-youtube"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
+          
         </div>
       </div>
     </div>
