alter product catagories file name

--- a/index.html
+++ b/index.html
@@ -166,33 +166,33 @@
  <section class="product-section" id="product-catagory-section"> 
   <h2 class="tiltle">Product catogory</h2>
   <div class=" container">
-     <a href="/product-catgories/Frying-Grilling.html" class="box wedding">
-      <h2>Frying & Grilling </h2>
-      <p><span>For crispy, golden textures and smoky flavors.</span></p>
+     <a href="/product-catgories/Cold-prep.html" class="box wedding">
+      <h2>Cold Preparations & Juice Maker</h2>
+      <p><span>Sugarcane Machines,Fruite Juicer,Ice Creame Machine,Commercial juicer,Orange Juiser,Comercial Blender,Water cooler</span></p>
     </a>
-    <div class="product-alt-btn">Click catagories for product</div>
-    <a href="/product-catgories/ice-cold.html" class="box convocations">
-      <h2>Ice & Cold Preparations</h2>
-      <p>For frozen treats and chilling convenience.</p>
+
+    <a href="/product-catgories/Frying.html" class="box convocations">
+      <h2>Frying & Gril</h2>
+      <p> Deep Fryer,Air Fryer,Frying Pan,Induction Fryer,Pressure Fryer</p>
     </a>
-    <a href="/product-catgories/Baking-roasting.html" class="box sports">
+    <a href="/product-catgories/Baking-roasting.html" class="baking-box">
       <h2>Baking & Roasting</h2>
-      <p>For cakes, breads, pizzas, and perfectly roasted dishes.</p>
+      <p>Bakery oven,Pizza Oven</p>
     </a>
     <div class="box tagline">
       <h2><span>Dee kitchen</span><br>Making Waves Everywhere !</h2>
     </div>
     <a href="/product-catgories/eating-cooking.html" class="box parties">
       <h2>Cooking & Eating</h2>
-      <p><BR>Reliable essentials for daily meal prep.</BR></p>
+      <p>Popcorn Machines,Crepe Machine,Waffel Maker,Sweetcorn Machine</p>
     </a>
     <a href="/product-catgories/Juise-Blending.html" class="box parties">
-      <h2>Juice & blending</h2>
-      <p>Fuel health and flavor with every blend.</p>
+      <h2>Food Making Tools</h2>
+      <p>Spiral Cutter,Chilling Cutting Machine,Chopper Machine,Potato Slicer,Hamburger Presser,Fiber Glass Statues</p>
     </a>
     <a href="/product-catgories/Beavarge-Speacial.html" class="box parties">
       <h2>Beavarage & Speacial use</h2>
-      <p>Curated for beverages and specialty prep.</p>
+      <p>Coffee Machine,Hot Beavarage Machine,Milk boiler,Hotchocolate Dispencer,Water Chiller</p>
     </a>
   </div>
  </section>
