--- a/product-catgories/Cold-prep.html
+++ b/product-catgories/Cold-prep.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Baking & roasting</title>
+    <title>Cold Preparations & Juice Maker</title>
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <h2 class="product-title">Baking & Roasting</h2>
+    <h2 class="product-title">Cold Preparations & Juice Maker</h2>
     <section class="product-category">
       <div class="category-nav">
         <button class="active">All</button>
