--- a/product-catgories/eating-cooking.html
+++ b/product-catgories/eating-cooking.html
@@ -1,158 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cooking & Eating</title>
-  <link rel="stylesheet" href="../style.css">
-</head>
-<body>
-  <h2 class="product-title">Cooking & Eating</h2>
-   <section class="product-category">
-    <div class="category-nav">
-    <button class="active">All</button>
-    <button>Sinks</button>
-    <button>Chimneys</button>
-    <button>Hobs</button>
-    <button>Microwaves</button>
-    <button>Ovens</button>
-    <button>Accessories</button>
-  </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cooking & Eating</title>
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
+    <h2 class="product-title">Cooking & Eating</h2>
+    <section class="product-category">
+      <div class="category-nav">
+        <button class="active">All</button>
+        <button>Sinks</button>
+        <button>Chimneys</button>
+        <button>Hobs</button>
+        <button>Microwaves</button>
+        <button>Ovens</button>
+        <button>Accessories</button>
+      </div>
 
- <div class="product-grid">
-  <div class="product-card" data-category="Sinks">
-    <img src="images/sink1.png" alt="Sink">
-    <h4>Stainless Sink</h4>
-    <p>₹5,999</p>
-  </div>
-  <div class="product-card" data-category="Hobs">
-    <img src="images/hob1.png" alt="Gas Hob">
-    <h4>4 Burner Gas Hob</h4>
-    <p>₹14,499</p>
-  </div>
-  <div class="product-card" data-category="Chimneys">
-    <img src="images/chimney1.png" alt="Chimney">
-    <h4>Auto-clean Chimney</h4>
-    <p>₹11,200</p>
-  </div>
-  <div class="product-card" data-category="Ovens">
-    <img src="images/oven1.png" alt="Oven">
-    <h4>Built-in Oven</h4>
-    <p>₹22,000</p>
-  </div>
-  <div class="product-card" data-category="Microwaves">
-    <img src="images/micro1.png" alt="Microwave">
-    <h4>Microwave Grill</h4>
-    <p>₹8,999</p>
-  </div>
-  <div class="product-card" data-category="Accessories">
-    <img src="images/accessory1.png" alt="Tray Organizer">
-    <h4>Tray Organizer</h4>
-    <p>₹1,499</p>
-  </div>
-  <div class="product-card" data-category="Sinks">
-    <img src="images/sink1.png" alt="Sink">
-    <h4>Stainless Sink</h4>
-    <p>₹5,999</p>
-  </div>
-  <div class="product-card" data-category="Hobs">
-    <img src="images/hob1.png" alt="Gas Hob">
-    <h4>4 Burner Gas Hob</h4>
-    <p>₹14,499</p>
-  </div>
-  <div class="product-card" data-category="Chimneys">
-    <img src="images/chimney1.png" alt="Chimney">
-    <h4>Auto-clean Chimney</h4>
-    <p>₹11,200</p>
-  </div>
-  <div class="product-card" data-category="Ovens">
-    <img src="images/oven1.png" alt="Oven">
-    <h4>Built-in Oven</h4>
-    <p>₹22,000</p>
-  </div>
-  <div class="product-card" data-category="Microwaves">
-    <img src="images/micro1.png" alt="Microwave">
-    <h4>Microwave Grill</h4>
-    <p>₹8,999</p>
-  </div>
-  <div class="product-card" data-category="Accessories">
-    <img src="images/accessory1.png" alt="Tray Organizer">
-    <h4>Tray Organizer</h4>
-    <p>₹1,499</p>
-  </div>
-</div>
+      <div class="product-grid">
+        <div class="product-card" data-category="Sinks">
+          <img src="images/sink1.png" alt="Sink" />
+          <h4>Stainless Sink</h4>
+          <p>₹5,999</p>
+        </div>
+        <div class="product-card" data-category="Hobs">
+          <img src="images/hob1.png" alt="Gas Hob" />
+          <h4>4 Burner Gas Hob</h4>
+          <p>₹14,499</p>
+        </div>
+        <div class="product-card" data-category="Chimneys">
+          <img src="images/chimney1.png" alt="Chimney" />
+          <h4>Auto-clean Chimney</h4>
+          <p>₹11,200</p>
+        </div>
+        <div class="product-card" data-category="Ovens">
+          <img src="images/oven1.png" alt="Oven" />
+          <h4>Built-in Oven</h4>
+          <p>₹22,000</p>
+        </div>
+        <div class="product-card" data-category="Microwaves">
+          <img src="images/micro1.png" alt="Microwave" />
+          <h4>Microwave Grill</h4>
+          <p>₹8,999</p>
+        </div>
+        <div class="product-card" data-category="Accessories">
+          <img src="images/accessory1.png" alt="Tray Organizer" />
+          <h4>Tray Organizer</h4>
+          <p>₹1,499</p>
+        </div>
+        <div class="product-card" data-category="Sinks">
+          <img src="images/sink1.png" alt="Sink" />
+          <h4>Stainless Sink</h4>
+          <p>₹5,999</p>
+        </div>
+        <div class="product-card" data-category="Hobs">
+          <img src="images/hob1.png" alt="Gas Hob" />
+          <h4>4 Burner Gas Hob</h4>
+          <p>₹14,499</p>
+        </div>
+        <div class="product-card" data-category="Chimneys">
+          <img src="images/chimney1.png" alt="Chimney" />
+          <h4>Auto-clean Chimney</h4>
+          <p>₹11,200</p>
+        </div>
+        <div class="product-card" data-category="Ovens">
+          <img src="images/oven1.png" alt="Oven" />
+          <h4>Built-in Oven</h4>
+          <p>₹22,000</p>
+        </div>
+        <div class="product-card" data-category="Microwaves">
+          <img src="images/micro1.png" alt="Microwave" />
+          <h4>Microwave Grill</h4>
+          <p>₹8,999</p>
+        </div>
+        <div class="product-card" data-category="Accessories">
+          <img src="images/accessory1.png" alt="Tray Organizer" />
+          <h4>Tray Organizer</h4>
+          <p>₹1,499</p>
+        </div>
+      </div>
 
-  <div class="pagination">
-    <span class="active">1</span>
-    <span>2</span>
-    <span>3</span>
-    <span>4</span>
-  </div>
-</section>
+      <div class="pagination">
+        <span class="active">1</span>
+        <span>2</span>
+        <span>3</span>
+        <span>4</span>
+      </div>
+    </section>
 
+    <script>
+      document.querySelectorAll(".category-nav button").forEach((btn) => {
+        btn.addEventListener("click", function () {
+          // Remove active class from all buttons
+          document
+            .querySelectorAll(".category-nav button")
+            .forEach((b) => b.classList.remove("active"));
+          this.classList.add("active");
+          const category = this.textContent.trim();
+          document.querySelectorAll(".product-card").forEach((card) => {
+            if (
+              category === "All" ||
+              card.getAttribute("data-category") === category
+            ) {
+              card.style.display = "";
+            } else {
+              card.style.display = "none";
+            }
+          });
+        });
+      });
 
-<script>
-document.querySelectorAll('.category-nav button').forEach(btn => {
-  btn.addEventListener('click', function() {
-    // Remove active class from all buttons
-    document.querySelectorAll('.category-nav button').forEach(b => b.classList.remove('active'));
-    this.classList.add('active');
-    const category = this.textContent.trim();
-    document.querySelectorAll('.product-card').forEach(card => {
-      if (category === 'All' || card.getAttribute('data-category') === category) {
-        card.style.display = '';
-      } else {
-        card.style.display = 'none';
+      const productsPerPage = 8; // Change this to show more/less per page
+      const productCards = Array.from(
+        document.querySelectorAll(".product-card")
+      );
+      const paginationSpans = Array.from(
+        document.querySelectorAll(".pagination span")
+      );
+
+      function showPage(page) {
+        // Hide all products
+        productCards.forEach((card) => (card.style.display = "none"));
+        // Get currently active category
+        const activeBtn = document.querySelector(".category-nav button.active");
+        const category = activeBtn ? activeBtn.textContent.trim() : "All";
+        // Filter products by category
+        const filtered = productCards.filter(
+          (card) =>
+            category === "All" ||
+            card.getAttribute("data-category") === category
+        );
+        // Show only products for this page
+        const start = (page - 1) * productsPerPage;
+        const end = start + productsPerPage;
+        filtered.slice(start, end).forEach((card) => (card.style.display = ""));
+        // Update pagination active state
+        paginationSpans.forEach((span, idx) => {
+          span.classList.toggle("active", idx === page - 1);
+        });
       }
-    });
-  });
-});
 
+      // Pagination click
+      paginationSpans.forEach((span, idx) => {
+        span.addEventListener("click", () => showPage(idx + 1));
+      });
 
+      // Category filter integration
+      document.querySelectorAll(".category-nav button").forEach((btn) => {
+        btn.addEventListener("click", function () {
+          // Remove active class from all buttons
+          document
+            .querySelectorAll(".category-nav button")
+            .forEach((b) => b.classList.remove("active"));
+          this.classList.add("active");
+          // Always show first page of filtered results
+          showPage(1);
+        });
+      });
 
-
-const productsPerPage = 8; // Change this to show more/less per page
-const productCards = Array.from(document.querySelectorAll('.product-card'));
-const paginationSpans = Array.from(document.querySelectorAll('.pagination span'));
-
-function showPage(page) {
-  // Hide all products
-  productCards.forEach(card => card.style.display = 'none');
-  // Get currently active category
-  const activeBtn = document.querySelector('.category-nav button.active');
-  const category = activeBtn ? activeBtn.textContent.trim() : 'All';
-  // Filter products by category
-  const filtered = productCards.filter(card =>
-    category === 'All' || card.getAttribute('data-category') === category
-  );
-  // Show only products for this page
-  const start = (page - 1) * productsPerPage;
-  const end = start + productsPerPage;
-  filtered.slice(start, end).forEach(card => card.style.display = '');
-  // Update pagination active state
-  paginationSpans.forEach((span, idx) => {
-    span.classList.toggle('active', idx === page - 1);
-  });
-}
-
-// Pagination click
-paginationSpans.forEach((span, idx) => {
-  span.addEventListener('click', () => showPage(idx + 1));
-});
-
-// Category filter integration
-document.querySelectorAll('.category-nav button').forEach(btn => {
-  btn.addEventListener('click', function() {
-    // Remove active class from all buttons
-    document.querySelectorAll('.category-nav button').forEach(b => b.classList.remove('active'));
-    this.classList.add('active');
-    // Always show first page of filtered results
-    showPage(1);
-  });
-});
-
-// Initial load
-showPage(1);
-</script>
-</body>
+      // Initial load
+      showPage(1);
+    </script>
+  </body>
 </html>
